--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-testpaths = ./test_cases/ui
+testpaths = ./test_cases/
 addopts = -vs
           --html=./report/test-report.html --self-contained-html
           --alluredir ./allure_result --clean-alluredir
